syntax = "proto3";

package product;

service ProductService {
  rpc CheckProductAvailability(CheckProductRequest) returns (CheckProductResponse);
}

message CheckProductRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message CheckProductResponse {
  bool available = 1;
}
